--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
           <div class="wishlist">
             <i class="fa-regular fa-heart"></i>
-            <span> wishlist</span>
+            <span> Wishlist</span>
           </div>
           <div class="bag">
            <i class="fa-solid fa-bag-shopping"></i>
